fix contrast

--- a/styles/base.css
+++ b/styles/base.css
@@ -74,5 +74,5 @@ footer {
 }
 
 #lastModified {
-  color: 998877;
+  color: #998877;
 }
